为所有表格应用official-table CSS类
- 更新所有HTML页面中的表格，确保都使用official-table类
- 包括矿石页面、武器页面、装备页面、食谱页面、符文页面等
- 统一表格样式，符合官方The Forge配色方案
- 保持表格的响应式设计和视觉一致性

--- a/ore/mythril.html
+++ b/ore/mythril.html
@@ -681,7 +681,7 @@
             <h2>⚖️ Mythril vs Other Legendary Ores</h2>
             
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; margin: 1rem 0;">
+                <table class="official-table" style="width: 100%; border-collapse: collapse; margin: 1rem 0;">
                     <thead>
                         <tr style="background: linear-gradient(135deg, var(--mythril-purple) 0%, var(--mythril-dark) 100%); color: #fff;">
                             <th style="padding: 1rem; text-align: left;">Ore Name</th>
