--- a/recipes/index.html
+++ b/recipes/index.html
@@ -425,7 +425,7 @@
             <p style="margin-bottom: 2rem;">Optimal ore combinations and success rates for each weapon type.</p>
             
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; background: #fff; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <table class="official-table" style="width: 100%; border-collapse: collapse; background: #fff; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                     <thead>
                         <tr style="background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%);">
                             <th style="padding: 1rem; text-align: left; color: #fff; font-weight: 700; border-bottom: 2px solid #e64a19;">Target Weapon</th>
@@ -503,7 +503,7 @@
             <p style="margin-bottom: 2rem;">Optimal ore requirements and success rates for each armor type.</p>
             
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; background: #fff; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <table class="official-table" style="width: 100%; border-collapse: collapse; background: #fff; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                     <thead>
                         <tr style="background: linear-gradient(135deg, #2196f3 0%, #1976d2 100%);">
                             <th style="padding: 1rem; text-align: left; color: #fff; font-weight: 700; border-bottom: 2px solid #1565c0;">Target Armor</th>
