--- a/wiki/runes.html
+++ b/wiki/runes.html
@@ -597,7 +597,7 @@
                 <div style="margin-bottom: 2rem;">
                     <h4 style="color: #fff; margin-bottom: 1rem; text-align: center; background: rgba(255,255,255,0.1); padding: 0.5rem; border-radius: 8px;">Main Traits</h4>
                     <div style="overflow-x: auto;">
-                        <table style="width: 100%; border-collapse: collapse; background: rgba(255,255,255,0.05); border-radius: 8px; overflow: hidden;">
+                        <table class="official-table" style="width: 100%; border-collapse: collapse; background: rgba(255,255,255,0.05); border-radius: 8px; overflow: hidden;">
                             <thead>
                                 <tr style="background: rgba(220, 53, 69, 0.8);">
                                     <th style="padding: 0.8rem; text-align: left; color: #fff; font-weight: bold;">Rune Traits</th>
@@ -730,7 +730,7 @@
                 <div>
                     <h4 style="color: #fff; margin-bottom: 1rem; text-align: center; background: rgba(255,255,255,0.1); padding: 0.5rem; border-radius: 8px;">Secondary Traits</h4>
                     <div style="overflow-x: auto;">
-                        <table style="width: 100%; border-collapse: collapse; background: rgba(255,255,255,0.05); border-radius: 8px; overflow: hidden;">
+                        <table class="official-table" style="width: 100%; border-collapse: collapse; background: rgba(255,255,255,0.05); border-radius: 8px; overflow: hidden;">
                             <thead>
                                 <tr style="background: rgba(144, 238, 144, 0.6);">
                                     <th style="padding: 0.8rem; text-align: left; color: #000; font-weight: bold;">Secondary Trait</th>
@@ -831,7 +831,7 @@
                     <!-- Weapon Secondary Traits -->
                     <div class="weapon-traits" style="padding: 1.5rem; border-radius: 10px;">
                         <h3 style="color: #e65100; margin-bottom: 1rem; text-align: center;">⚔️ WEAPON SECONDARY TRAITS</h3>
-                        <table class="trait-table">
+                        <table class="official-table trait-table">
                             <thead>
                                 <tr>
                                     <th>Secondary Trait</th>
@@ -866,7 +866,7 @@
                     <!-- Armor Secondary Traits -->
                     <div class="armor-traits" style="padding: 1.5rem; border-radius: 10px;">
                         <h3 style="color: #2e7d32; margin-bottom: 1rem; text-align: center;">🛡️ ARMOR SECONDARY TRAITS</h3>
-                        <table class="trait-table">
+                        <table class="official-table trait-table">
                             <thead>
                                 <tr>
                                     <th>Secondary Trait</th>
@@ -1046,7 +1046,7 @@
             <h2>📊 Rune Recommendations by Gear Type</h2>
             
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; margin: 1rem 0; background: #fff; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                <table class="official-table" style="width: 100%; border-collapse: collapse; margin: 1rem 0; background: #fff; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
                     <thead>
                         <tr style="background: linear-gradient(135deg, var(--rune-purple) 0%, #512da8 100%);">
                             <th style="padding: 1rem; text-align: left; font-weight: 700; color: #fff;">Gear Type</th>
