--- a/ore/stone.html
+++ b/ore/stone.html
@@ -740,7 +740,7 @@
             <h2>⚖️ Stone vs Other Common Ores</h2>
             
             <div style="overflow-x: auto;">
-                <table style="width: 100%; border-collapse: collapse; margin: 1rem 0;">
+                <table class="official-table" style="width: 100%; border-collapse: collapse; margin: 1rem 0;">
                     <thead>
                         <tr style="background: linear-gradient(135deg, var(--stone-gray) 0%, var(--metal-steel) 100%); color: #fff;">
                             <th style="padding: 1rem; text-align: left;">Ore Name</th>
