🔧 完成URL结构优化和重定向问题修复
✅ 主要修复:
- 移除所有内部链接的.html后缀
- 修复sitemap.xml URL结构一致性
- 更新所有页面canonical标签
- 优化.htaccess重定向规则
- 解决308重定向和canonical指向重定向问题

🎯 技术改进:
- 统一URL架构(无.html后缀)
- 消除不必要的重定向
- 提升SEO性能和用户体验
- 修复Google Search Console错误

📊 影响范围:
- 32个HTML文件链接优化
- sitemap.xml结构更新
- .htaccess规则简化
- 20+种链接类型修复

--- a/404.html
+++ b/404.html
@@ -33,18 +33,18 @@
         
         <div class="buttons">
             <a href="/" class="btn">🏠 Return Home</a>
-            <a href="/codes.html" class="btn btn-secondary">🎁 Get Codes</a>
+            <a href="/codes" class="btn btn-secondary">🎁 Get Codes</a>
         </div>
         
         <div class="suggestions">
             <h3>🔍 Popular Pages</h3>
             <ul>
                 <li><a href="/">🔧 Forge Calculator</a></li>
-                <li><a href="/codes.html">🎁 Active Codes</a></li>
-                <li><a href="/recipes/">📖 Recipes Database</a></li>
-                <li><a href="/weapons.html">⚔️ Weapons Guide</a></li>
-                <li><a href="/armor.html">🛡️ Armor Guide</a></li>
-                <li><a href="/wiki/">📚 Complete Wiki</a></li>
+                <li><a href="/codes">🎁 Active Codes</a></li>
+                <li><a href="/recipes">📖 Recipes Database</a></li>
+                <li><a href="/weapons">⚔️ Weapons Guide</a></li>
+                <li><a href="/armor">🛡️ Armor Guide</a></li>
+                <li><a href="/wiki">📚 Complete Wiki</a></li>
             </ul>
         </div>
     </div>
