--- a/armor.html
+++ b/armor.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Complete guide to all armor types in The Forge - Light, Medium, and Heavy armor with stats, prices, and crafting information.">
     <meta name="keywords" content="the forge armor, forge armor guide, light armor, medium armor, heavy armor, armor stats">
-    <link rel="canonical" href="https://forge-calculator.com/armor.html">
+    <link rel="canonical" href="https://forge-calculator.com/armor">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -56,17 +56,17 @@
         <div class="container">
             <h1>🛡️ The Forge Armor</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -302,7 +302,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
+            <p><a href="/">Home</a> | <a href="/wiki">Wiki</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a></p>
             
             <p class="footer-section">
             </p>
