--- a/ore/stone.html
+++ b/ore/stone.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Complete guide to Stone ore in The Forge - Learn how to get Stone, where to mine it, and how to use it for crafting weapons and armor.">
     <meta name="keywords" content="the forge stone, stone ore, how to get stone forge, stone mining guide, forge stone crafting, roblox forge stone">
-    <link rel="canonical" href="https://forge-calculator.com/ore/stone.html">
+    <link rel="canonical" href="https://forge-calculator.com/ore/stone">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -54,17 +54,17 @@
         <div class="container">
             <h1>🪨 Stone Ore Guide</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -533,7 +533,7 @@
             <h2>🔥 Try Stone Crafting Now!</h2>
             <p>Use our calculator to plan your Stone ore crafting and see the results</p>
             <a href="/" class="cta-btn">Open Calculator</a>
-            <a href="/recipes/" class="cta-btn">View All Recipes</a>
+            <a href="/recipes" class="cta-btn">View All Recipes</a>
             <a href="./" class="cta-btn">Back to Ore Guide</a>
         </div>
     </div>
@@ -541,7 +541,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="./">Ore Guide</a> | <a href="/recipes/">Recipes</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="./">Ore Guide</a> | <a href="/recipes">Recipes</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a> | <a href="/terms-of-service">Terms</a></p>
         </div>
             
             <p class="footer-section">
