--- a/pickaxe.html
+++ b/pickaxe.html
@@ -22,7 +22,7 @@
     
     <meta name="description" content="Complete guide to Pickaxes in The Forge - Learn about all pickaxe types, mining power, luck boost, and rune slots. Master the art of ore mining with the best pickaxe strategies.">
     <meta name="keywords" content="the forge pickaxe, forge pickaxe guide, roblox forge pickaxe, pickaxe mining power, pickaxe luck boost, pickaxe rune slots, best pickaxe the forge">
-    <link rel="canonical" href="https://forge-calculator.com/pickaxe.html">
+    <link rel="canonical" href="https://forge-calculator.com/pickaxe">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -56,16 +56,16 @@
         <div class="container">
             <h1>⛏️ The Forge Pickaxe Guide</h1>
             <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -549,15 +549,15 @@
         <div class="cta-box">
             <h2>⛏️ Ready to Master Mining?</h2>
             <p>Choose your pickaxe and start your journey to legendary Forger status!</p>
-            <a href="/ore/" class="cta-btn">Explore All Ores</a>
+            <a href="/ore" class="cta-btn">Explore All Ores</a>
             <a href="/" class="cta-btn">Use Calculator</a>
-            <a href="/weapons.html" class="cta-btn">View Weapons</a>
+            <a href="/weapons" class="cta-btn">View Weapons</a>
         </div>
     </div>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 The Forge Calculator. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
+            <p>&copy; 2025 The Forge Calculator. All rights reserved. | <a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-of-service">Terms of Service</a></p>
             <p>The Forge Calculator is not affiliated with Roblox Corporation or the creators of The Forge game.</p>
         </div>
     </footer>
