--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Privacy Policy for Roblox The Forge Calculator">
-    <link rel="canonical" href="https://forge-calculator.com/privacy-policy.html">
+    <link rel="canonical" href="https://forge-calculator.com/privacy-policy">
     <title>Privacy Policy - Roblox The Forge Calculator</title>
     <link rel="stylesheet" href="forge-theme.css">
     
