--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Terms of Service for Roblox The Forge Calculator">
-    <link rel="canonical" href="https://forge-calculator.com/terms-of-service.html">
+    <link rel="canonical" href="https://forge-calculator.com/terms-of-service">
     <title>Terms of Service - Roblox The Forge Calculator</title>
     <link rel="stylesheet" href="forge-theme.css">
     
