--- a/weapons.html
+++ b/weapons.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="The Forge Weapons Guide - Learn about all 8 weapon types in The Forge Roblox game. From Daggers to Colossal Swords.">
     <meta name="keywords" content="the forge weapons, forge weapon types, roblox forge weapons, the forge weapon guide, colossal swords, katana, daggers, great axes">
-    <link rel="canonical" href="https://forge-calculator.com/weapons.html">
+    <link rel="canonical" href="https://forge-calculator.com/weapons">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -56,17 +56,17 @@
         <div class="container">
             <h1>⚔️ The Forge Weapons</h1>
                         <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -528,8 +528,8 @@
             <h3>🔥 Ready to Craft Your Weapon?</h3>
             <p>Use our calculator to plan your ore combinations and create the perfect weapon!</p>
             <a href="/" class="cta-btn">⚒️ Try Calculator</a>
-            <a href="/ore/" class="cta-btn">🪨 Ore Guide</a>
-            <a href="/codes.html" class="cta-btn">🎁 Get Free Ores</a>
+            <a href="/ore" class="cta-btn">🪨 Ore Guide</a>
+            <a href="/codes" class="cta-btn">🎁 Get Free Ores</a>
         </div>
 
         <div class="content-section">
@@ -540,7 +540,7 @@
                 <li><strong>Specialized Builds:</strong> Katanas for speed, Great Hammers for power, Gauntlets for close combat</li>
                 <li><strong>End-Game:</strong> Work towards Colossal Swords for ultimate power</li>
                 <li><strong>Ore Planning:</strong> Use our <a href="/">calculator</a> to plan your ore combinations</li>
-                <li><strong>Free Resources:</strong> Check our <a href="/codes.html">codes page</a> for free ores</li>
+                <li><strong>Free Resources:</strong> Check our <a href="/codes">codes page</a> for free ores</li>
             </ul>
         </div>
     </div>
@@ -551,7 +551,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/weapons.html">Weapons</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="/wiki">Wiki</a> | <a href="/weapons">Weapons</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a> | <a href="/terms-of-service">Terms</a></p>
             
             <p class="footer-section">
             </p>
