--- a/wiki/npcs.html
+++ b/wiki/npcs.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Complete guide to all NPCs in The Forge - Meet Sensei Moro, Marbles, Miner Fred, Maria, and other helpful characters.">
     <meta name="keywords" content="the forge npcs, forge characters, sensei moro, marbles, miner fred, maria, forge npc guide">
-    <link rel="canonical" href="https://forge-calculator.com/wiki/npcs.html">
+    <link rel="canonical" href="https://forge-calculator.com/wiki/npcs">
     <title>The Forge NPCs Guide - All Characters & Services</title>
     
     <!-- Advertisement code removed for security compliance -->    
@@ -42,17 +42,17 @@
         <div class="container">
             <h1>🧙 The Forge NPCs</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -186,6 +186,6 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
+            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a></p>
         </div>
     <!-- Advertisement section removed for security compliance -->
