--- a/wiki/races.html
+++ b/wiki/races.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Complete guide to all 13 races in The Forge - Learn about race abilities, stats, and which race is best for your playstyle.">
     <meta name="keywords" content="the forge races, forge race guide, best race forge, race abilities, race stats, roblox forge races">
-    <link rel="canonical" href="https://forge-calculator.com/wiki/races.html">
+    <link rel="canonical" href="https://forge-calculator.com/wiki/races">
     <title>The Forge Races Guide - All 13 Races & Abilities</title>
     
     <!-- Advertisement code removed for security compliance -->    
@@ -42,17 +42,17 @@
         <div class="container">
             <h1>👤 The Forge Races</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -345,7 +345,7 @@
                 <li><strong>Mining/Crafting:</strong> Dwarf is the best choice</li>
                 <li><strong>Sustain Builds:</strong> Zombie or Undead</li>
                 <li><strong>Endgame:</strong> Mythical races (Angel/Demon) offer the most powerful abilities</li>
-                <li><strong>Rerolling:</strong> Use codes from our <a href="/codes.html">Codes page</a></li>
+                <li><strong>Rerolling:</strong> Use codes from our <a href="/codes">Codes page</a></li>
             </ul>
         </div>
     </div>
@@ -359,6 +359,6 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
+            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a></p>
         </div>
     <!-- Advertisement section removed for security compliance -->
