--- a/feedback.html
+++ b/feedback.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Send feedback about The Forge Calculator - Report issues, suggest features, or ask questions.">
     <meta name="keywords" content="forge calculator feedback, contact, support, suggestions">
-    <link rel="canonical" href="https://forge-calculator.com/feedback.html">
+    <link rel="canonical" href="https://forge-calculator.com/feedback">
     <title>Feedback - The Forge Calculator</title>
     <link rel="stylesheet" href="forge-theme.css">
     
@@ -45,17 +45,17 @@
         <div class="container">
             <h1>💬 Feedback</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -160,7 +160,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/blog/">Blog</a> | <a href="/feedback.html">Feedback</a></p>
+            <p><a href="/">Home</a> | <a href="/wiki">Wiki</a> | <a href="/blog">Blog</a> | <a href="/feedback">Feedback</a></p>
         </div>
             
             <p class="footer-section">
