--- a/ore/index.html
+++ b/ore/index.html
@@ -54,17 +54,17 @@
         <div class="container">
             <h1>🪨 The Forge Ore Guide</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -81,7 +81,7 @@
                 ⚠️ Community Data Notice
             </h2>
             <p>
-                The ore information and game mechanics described on this page are being verified by our community. While we strive for accuracy, some details may not reflect the current game state. If you have verified game data or corrections, please <a href="/feedback.html">submit feedback</a> to help us improve!
+                The ore information and game mechanics described on this page are being verified by our community. While we strive for accuracy, some details may not reflect the current game state. If you have verified game data or corrections, please <a href="/feedback">submit feedback</a> to help us improve!
             </p>
             <p>
                 <strong>Last Updated:</strong> December 2025
@@ -111,7 +111,7 @@
                     <tbody>
                         <!-- Common Ores -->
                         <tr>
-                            <td class="ore-name"><a href="stone.html">Stone</a></td>
+                            <td class="ore-name"><a href="stone">Stone</a></td>
                             <td class="rarity-common">Common</td>
                             <td>1/1</td>
                             <td>0.2x</td>
@@ -459,7 +459,7 @@
                             <td>Dangerous, unstable, and glowing green.</td>
                         </tr>
                         <tr>
-                            <td class="ore-name"><a href="mythril.html">Mythril</a></td>
+                            <td class="ore-name"><a href="mythril">Mythril</a></td>
                             <td class="rarity-legendary">Legendary</td>
                             <td>1/813</td>
                             <td>3.5x</td>
@@ -509,7 +509,7 @@
                             <td>So bright it almost floats.</td>
                         </tr>
                         <tr>
-                            <td class="ore-name"><a href="snowite.html">Snowite</a></td>
+                            <td class="ore-name"><a href="snowite">Snowite</a></td>
                             <td class="rarity-legendary">Legendary</td>
                             <td>1/4325</td>
                             <td>8x</td>
@@ -655,7 +655,7 @@
 
             <h2>Rock Types & What They Contain:</h2>
             <ul>
-                <li><strong>Pebble:</strong> <a href="stone.html">Stone</a>, Sand Stone, Copper, Iron, Poopite</li>
+                <li><strong>Pebble:</strong> <a href="stone">Stone</a>, Sand Stone, Copper, Iron, Poopite</li>
                 <li><strong>Rock:</strong> Sand Stone, Copper, Iron, Tin, Silver, Mushroomite, Bananite, Cardboardite</li>
                 <li><strong>Boulder:</strong> Copper, Iron, Tin, Silver, Gold, Mushroomite, Bananite, Cardboardite, Aite, Poopite</li>
                 <li><strong>Basalt Rock:</strong> Silver, Gold, Platinum</li>
@@ -670,7 +670,7 @@
             <h2 class="text-highlight">Mining Rocks:</h2>
             <p>The primary method to gather ores. Mine different rock types to find various ores:</p>
             <ul>
-                <li><strong>Pebble:</strong> Easiest to mine, contains common ores like <a href="stone.html">Stone</a>, Copper, and Iron</li>
+                <li><strong>Pebble:</strong> Easiest to mine, contains common ores like <a href="stone">Stone</a>, Copper, and Iron</li>
                 <li><strong>Rock:</strong> Medium difficulty, good variety including Tin, Silver, and Mushroomite</li>
                 <li><strong>Boulder:</strong> Harder to mine, best chance for rare ores like Gold, Platinum, and Aite</li>
                 <li><strong>Basalt Rock:</strong> Special rock type with Silver, Gold, and Platinum</li>
@@ -692,7 +692,7 @@
             
             <h2>Common Ores - Great for Beginners:</h2>
             <ul>
-                <li><strong><a href="stone.html">Stone</a>:</strong> The most basic material - it's literally just a rock</li>
+                <li><strong><a href="stone">Stone</a>:</strong> The most basic material - it's literally just a rock</li>
                 <li><strong>Sand Stone:</strong> Crumbly but buildable, not water-resistant</li>
                 <li><strong>Copper:</strong> Reliable starter material for basic crafting</li>
                 <li><strong>Iron:</strong> The workhorse of the forge - versatile and dependable</li>
@@ -724,8 +724,8 @@
             <h2>🔥 Use Our Tools</h2>
             <p>Plan your ore combinations and get free rewards</p>
             <a href="/" class="cta-btn">Calculator</a>
-            <a href="/codes.html" class="cta-btn">Codes</a>
-            <a href="/weapons.html" class="cta-btn">Weapons</a>
+            <a href="/codes" class="cta-btn">Codes</a>
+            <a href="/weapons" class="cta-btn">Weapons</a>
         </div>
 
 
@@ -740,6 +740,6 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/ore/">Ore Guide</a> | <a href="/blog/">Blog</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="/codes">Codes</a> | <a href="/ore">Ore Guide</a> | <a href="/blog">Blog</a> | <a href="/privacy-policy">Privacy</a> | <a href="/terms-of-service">Terms</a></p>
         </div>
     <!-- Advertisement section removed for security compliance -->
