--- a/ore/snowite.html
+++ b/ore/snowite.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Complete guide to Snowite The Forge ore - Learn how to get Snowite The Forge, where to mine Snowite The Forge, and how to use Snowite The Forge for crafting legendary weapons with attack speed bonuses.">
     <meta name="keywords" content="snowite the forge, snowite the forge ore, how to get snowite the forge, snowite the forge mining guide, snowite the forge crafting, roblox snowite the forge, legendary snowite the forge ore, snowite the forge attack speed">
-    <link rel="canonical" href="https://forge-calculator.com/ore/snowite.html">
+    <link rel="canonical" href="https://forge-calculator.com/ore/snowite">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -55,17 +55,17 @@
         <div class="container">
             <h1>❄️ Snowite The Forge Ore Guide</h1>
             <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -509,15 +509,15 @@
         <div class="cta-box">
             <h2>🚀 Ready to Hunt for Snowite?</h2>
             <p>Start your legendary mining journey and craft the ultimate speed weapons!</p>
-            <a href="/ore/" class="cta-btn">Explore All Ores</a>
-            <a href="/weapons.html" class="cta-btn">View Weapons</a>
+            <a href="/ore" class="cta-btn">Explore All Ores</a>
+            <a href="/weapons" class="cta-btn">View Weapons</a>
             <a href="/" class="cta-btn">Use Calculator</a>
         </div>
     </div>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 The Forge Calculator. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
+            <p>&copy; 2025 The Forge Calculator. All rights reserved. | <a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-of-service">Terms of Service</a></p>
             <p>The Forge Calculator is not affiliated with Roblox Corporation or the creators of The Forge game.</p>
         </div>
     </footer>
