--- a/wiki/enemies.html
+++ b/wiki/enemies.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Complete guide to all enemies in The Forge - Learn about Zombies, Skeletons, Hell Skeletons, and combat strategies.">
     <meta name="keywords" content="the forge enemies, forge combat guide, zombies, skeletons, hell skeletons, forge enemy types">
-    <link rel="canonical" href="https://forge-calculator.com/wiki/enemies.html">
+    <link rel="canonical" href="https://forge-calculator.com/wiki/enemies">
     <title>The Forge Enemies Guide - Combat & Enemy Types</title>
     
     <!-- Advertisement code removed for security compliance -->    
@@ -42,17 +42,17 @@
         <div class="container">
             <h1>⚔️ The Forge Enemies</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -172,6 +172,6 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a></p>
+            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a></p>
         </div>
     <!-- Advertisement section removed for security compliance -->
