--- a/wiki/gamepass.html
+++ b/wiki/gamepass.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Complete guide to The Forge Gamepasses - Learn about the best gamepasses, cash packs, and developer products to enhance your gameplay.">
     <meta name="keywords" content="the forge gamepasses, forge robux, best gamepasses, cash packs, developer products, totems">
-    <link rel="canonical" href="https://forge-calculator.com/wiki/gamepass.html">
+    <link rel="canonical" href="https://forge-calculator.com/wiki/gamepass">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -54,17 +54,17 @@
         <div class="container">
             <h1>🎫 The Forge Gamepasses</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -310,7 +310,7 @@
             <h2>🔥 Optimize Your Forge Strategy!</h2>
             <p>Use our tools to plan your equipment and resource management</p>
             <a href="/" class="cta-btn">Open Calculator</a>
-            <a href="/codes.html" class="cta-btn">Get Free Codes</a>
+            <a href="/codes" class="cta-btn">Get Free Codes</a>
             <a href="./" class="cta-btn">Back to Wiki</a>
         </div>
     </div>
@@ -318,7 +318,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/recipes/">Recipes</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/recipes">Recipes</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a> | <a href="/terms-of-service">Terms</a></p>
         </div>
             
             <p class="footer-section">
