--- a/wiki/index.html
+++ b/wiki/index.html
@@ -54,17 +54,17 @@
         <div class="container">
             <h1>📚 The Forge Wiki</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -147,7 +147,7 @@
                 <p>Use our tools and guides to become a master blacksmith!</p>
                 <div>
                     <a href="/">🔥 Try Calculator</a>
-                    <a href="/codes.html">🎁 Get Free Codes</a>
+                    <a href="/codes">🎁 Get Free Codes</a>
                 </div>
             </div>
         </div>
@@ -200,9 +200,9 @@
             <h3>🚀 Popular Pages</h3>
             <div class="quick-links-grid">
                 <a href="/" class="quick-link-btn">⚒️ Calculator</a>
-                <a href="/codes.html" class="quick-link-btn">🎁 Active Codes</a>
-                <a href="/recipes/" class="quick-link-btn">📖 Recipes</a>
-                <a href="/ore/" class="quick-link-btn">🪨 Ore Guide</a>
+                <a href="/codes" class="quick-link-btn">🎁 Active Codes</a>
+                <a href="/recipes" class="quick-link-btn">📖 Recipes</a>
+                <a href="/ore" class="quick-link-btn">🪨 Ore Guide</a>
             </div>
         </div>
 
@@ -214,7 +214,7 @@
                 <!-- Codes & Rewards -->
                 <div class="category-card">
                     <div class="category-icon">🎁</div>
-                    <h3 class="category-title"><a href="/codes.html">Codes & Rewards</a></h3>
+                    <h3 class="category-title"><a href="/codes">Codes & Rewards</a></h3>
                 </div>
 
                 <!-- Calculators -->
@@ -226,55 +226,55 @@
                 <!-- Resources -->
                 <div class="category-card">
                     <div class="category-icon">🪨</div>
-                    <h3 class="category-title"><a href="/ore/">Resources & Ores</a></h3>
+                    <h3 class="category-title"><a href="/ore">Resources & Ores</a></h3>
                 </div>
 
                 <!-- Crafting -->
                 <div class="category-card">
                     <div class="category-icon">🔨</div>
-                    <h3 class="category-title"><a href="/recipes/">Crafting & Recipes</a></h3>
+                    <h3 class="category-title"><a href="/recipes">Crafting & Recipes</a></h3>
                 </div>
 
                 <!-- Weapons -->
                 <div class="category-card">
                     <div class="category-icon">⚔️</div>
-                    <h3 class="category-title"><a href="/weapons.html">Weapons</a></h3>
+                    <h3 class="category-title"><a href="/weapons">Weapons</a></h3>
                 </div>
 
                 <!-- Armor -->
                 <div class="category-card">
                     <div class="category-icon">🛡️</div>
-                    <h3 class="category-title"><a href="/armor.html">Armor</a></h3>
+                    <h3 class="category-title"><a href="/armor">Armor</a></h3>
                 </div>
 
                 <!-- Races -->
                 <div class="category-card">
                     <div class="category-icon">👤</div>
-                    <h3 class="category-title"><a href="races.html">Races & Traits</a></h3>
+                    <h3 class="category-title"><a href="races">Races & Traits</a></h3>
                 </div>
 
                 <!-- Enemies -->
                 <div class="category-card">
                     <div class="category-icon">⚔️</div>
-                    <h3 class="category-title"><a href="enemies.html">Enemies & Combat</a></h3>
+                    <h3 class="category-title"><a href="enemies">Enemies & Combat</a></h3>
                 </div>
 
                 <!-- Runes -->
                 <div class="category-card">
                     <div class="category-icon">🔮</div>
-                    <h3 class="category-title"><a href="runes.html">Runes & Enhancements</a></h3>
+                    <h3 class="category-title"><a href="runes">Runes & Enhancements</a></h3>
                 </div>
 
                 <!-- NPCs -->
                 <div class="category-card">
                     <div class="category-icon">🧙</div>
-                    <h3 class="category-title"><a href="npcs.html">NPCs & Characters</a></h3>
+                    <h3 class="category-title"><a href="npcs">NPCs & Characters</a></h3>
                 </div>
 
                 <!-- Gamepasses -->
                 <div class="category-card">
                     <div class="category-icon">🎫</div>
-                    <h3 class="category-title"><a href="gamepass.html">Gamepasses & Purchases</a></h3>
+                    <h3 class="category-title"><a href="gamepass">Gamepasses & Purchases</a></h3>
                 </div>
             </div>
         </div>
@@ -477,7 +477,7 @@
                 </h4>
                 <ul>
                     <li><strong class="text-highlight">Sensei Moro:</strong> Always your #1 priority in both worlds - essential for main story progression</li>
-                    <li><strong class="text-highlight">Bard Quest:</strong> Critical in World 1 - unlocks the Arcane Pickaxe (see <a href="/pickaxe.html">Pickaxe Guide</a> for progression details)</li>
+                    <li><strong class="text-highlight">Bard Quest:</strong> Critical in World 1 - unlocks the Arcane Pickaxe (see <a href="/pickaxe">Pickaxe Guide</a> for progression details)</li>
                     <li><strong class="text-highlight">Daily Quests:</strong> Masked Stranger dailies provide consistent rewards - don't skip them</li>
                     <li><strong class="text-highlight">Avoid Low Priority:</strong> Cat Quest and Goblin King Quest offer minimal benefits - focus on high-priority quests first</li>
                 </ul>
@@ -626,7 +626,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator Wiki. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/blog/">Blog</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="/wiki">Wiki</a> | <a href="/blog">Blog</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a> | <a href="/terms-of-service">Terms</a></p>
         </div>
             
             <p class="footer-section">
