--- a/wiki/runes.html
+++ b/wiki/runes.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Complete guide to Runes in The Forge - Learn about all rune types, effects, and how to socket them on weapons and armor for powerful buffs.">
     <meta name="keywords" content="the forge runes, forge rune guide, roblox forge runes, rune effects, mythic engraving, grand sigil, forged glyph">
-    <link rel="canonical" href="https://forge-calculator.com/wiki/runes.html">
+    <link rel="canonical" href="https://forge-calculator.com/wiki/runes">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -54,17 +54,17 @@
         <div class="container">
             <h1>🔮 The Forge Runes Guide</h1>
                                     <nav>
-                <a href="/recipes/">Recipes</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/recipes">Recipes</a>
+                <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
-                <a href="/ore/">Ore</a>
-                <a href="/wiki/">Wiki</a>
-                <a href="/weapons.html">Weapons</a>
-                <a href="/armor.html">Armor</a>
-                <a href="/pickaxe.html">Pickaxe</a>
-                <a href="/private-server.html">Private Servers</a>
-                <a href="/blog/">Blog</a>
-                <a href="/feedback.html">Feedback</a>
+                <a href="/ore">Ore</a>
+                <a href="/wiki">Wiki</a>
+                <a href="/weapons">Weapons</a>
+                <a href="/armor">Armor</a>
+                <a href="/pickaxe">Pickaxe</a>
+                <a href="/private-server">Private Servers</a>
+                <a href="/blog">Blog</a>
+                <a href="/feedback">Feedback</a>
             </nav>
         </div>
     </header>
@@ -791,7 +791,7 @@
             <h2>🔥 Plan Your Rune Strategy!</h2>
             <p>Use our tools to plan your equipment builds and rune combinations</p>
             <a href="/" class="cta-btn">Open Calculator</a>
-            <a href="/weapons.html" class="cta-btn">Weapon Guide</a>
+            <a href="/weapons" class="cta-btn">Weapon Guide</a>
             <a href="./" class="cta-btn">Back to Wiki</a>
         </div>
     </div>
@@ -799,7 +799,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/recipes/">Recipes</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
+            <p><a href="/">Home</a> | <a href="./">Wiki</a> | <a href="/recipes">Recipes</a> | <a href="/codes">Codes</a> | <a href="/privacy-policy">Privacy</a> | <a href="/terms-of-service">Terms</a></p>
         </div>
             
             <p class="footer-section">
